# serializer version: 1
# name: TestCommandOutputs.test_check_output_snapshot
  '''
  Usage: polylogue ops doctor [OPTIONS]
    Health check with optional maintenance and cleanup previews.
  Options:
    -f, --format [json]             Output format
    -v, --verbose                   Show breakdown by provider
    --repair                        Run safe derived-data maintenance repairs
    --cleanup                       Run destructive archive cleanup for orphaned
                                    or empty persisted data
    --target [session_insights|message_type_backfill|orphaned_messages|empty_sessi
  ons|orphaned_attachments|orphaned_blobs|superseded_raw_snapshots]
                                    Limit maintenance to named targets such as
                                    session_insights, message_type_backfill,
                                    orphaned_messages, empty_sessions,
                                    orphaned_attachments, orphaned_blobs, or
                                    superseded_raw_snapshots
    --preview                       Preview maintenance without executing
                                    (requires --repair or --cleanup)
    --vacuum                        Reclaim unused space after maintenance
                                    (requires --repair or --cleanup)
    --deep                          Run SQLite integrity and expensive orphan
                                    scans (slow on large databases)
    --runtime                       Run environment and runtime verification
                                    checks
    --daemon                        Show daemon component status
    --blob, --blob-integrity        Verify blob store integrity (missing,
                                    orphaned, corrupt, and stale-lease blobs)
    --full                          Run full blob-integrity scan (requires
                                    --blob)
    --schemas                       Run raw-corpus schema verification (non-
                                    mutating)
    --artifact-coverage             Inspect durable artifact coverage
    --artifacts                     List durable artifact observations
    --cohorts                       Summarize durable artifact cohorts
    --schema-provider TEXT          Limit schema verification to DB provider
                                    name (repeatable)
    --artifact-provider TEXT        Limit artifact coverage<PATH> to
                                    effective provider (repeatable)
    --artifact-status TEXT          Limit artifact listing<PATH> to support
                                    status (repeatable)
    --artifact-kind TEXT            Limit artifact listing<PATH> to artifact
                                    kind (repeatable)
    --artifact-limit INTEGER        Limit artifact coverage<PATH> to
                                    N observation rows
    --artifact-offset INTEGER       Start offset for artifact
                                    coverage<PATH>  [default: 0]
    --schema-samples TEXT           Validation samples per raw payload: positive
                                    integer or 'all'  [default: all]
    --schema-record-limit INTEGER   Limit schema verification to N raw records
                                    (for chunked runs)
    --schema-record-offset INTEGER  Start offset for chunked schema verification
                                    [default: 0]
    --schema-quarantine-malformed   Mark malformed raw payloads as failed
                                    validation during schema verification
                                    (mutates DB)
    -h, --help                      Show this message and exit.
  '''
# ---
# name: TestErrorOutput.test_invalid_option_error_output
  '''
  Usage: polylogue [OPTIONS] [COMMAND] [ARGS]...
  Try 'polylogue --help' for help.
  Error: No such option '--bogus'. Did you mean '--verbose'?
  Hint: `--bogus` is not a recognized option. Run `polylogue --help` for the full
  option list, or `polylogue "--bogus"` if you meant to search for that string.
  '''
# ---
# name: TestHelpOutput.test_help_output_snapshot
  '''
  Usage: polylogue [OPTIONS] [COMMAND] [ARGS]...
    Polylogue - AI session archive.
    Dispatch model (query-first):
        Use `polylogue find QUERY then ACTION` for query-result workflows.
        Quoted query text is also accepted when followed by an action:
        `polylogue 'QUERY' then read`.
        Run `polylogue --help` to see the full subcommand list, or
        `polylogue --diagnose <args>` to have the parser explain how it
        routed your invocation.
    Product roles:
        Search<PATH>:   find QUERY then read|select|mark|analyze|delete|cont
  inue; facets
        Setup<PATH>:  config, init, import, demo, tutorial
        Reader<PATH>:           dashboard --status, dashboard
        Operations:           status (same as polylogue ops status), ops diagnosti
  cs, ops maintenance, ops backup
    Query mode (default):
        polylogue find "search terms"
        polylogue --origin claude-ai-export --since "last week" find "search terms
  "
        polylogue --latest find 'repo:polylogue' then read --to browser
    Verbs (actions on matched sessions):
        polylogue find id:abc then read          # exact ref: one selected session
        polylogue find id:abc then select --json # expose selected-session identit
  y
        polylogue find id:abc then read --view messages
        polylogue find id:abc then read --to browser
        polylogue find id:abc then analyze --facets
        polylogue facets --query "vector store" --format json
        polylogue find "urgent" then delete --dry-run
        polylogue find 'repo:polylogue' then read --all --format ndjson
    Combined filters:
        polylogue --referenced-path README.md find 'repo:polylogue' then read
        polylogue find 'actions where tool:bash AND text:pytest' then read --view
  messages
        polylogue --action-sequence file_read,file_edit,shell find 'repo:polylogue
  ' then analyze
        polylogue --action-text "pytest -q" find 'repo:polylogue' then read
        polylogue find 'pytest -q tests<PATH>' --retrie
  val-lane actions
        polylogue --origin claude-code-session --since 2026-01-01 find 'repo:polyl
  ogue' then analyze --by repo --format json
        polylogue find 'actions where action:file_edit AND path:polylogue<PATH>' the
  n read --view messages
        polylogue find 'near:"sqlite locking bug in parser"' then read
    Modifiers (write operations):
        polylogue find "urgent" then mark --tag-add review
    See also:
        polylogue --help                  # this screen
        polylogue find --help             # query workflow help
        polylogue <subcommand> --help     # per-subcommand help
        polylogue --diagnose <args>       # explain parser decisions
  Options:
    --help-markdown                 Emit the full --help tree (root + every
                                    subcommand) as Markdown and exit.
    -i, --id TEXT                   Session ID (exact or prefix match)
    -c, --contains TEXT             FTS term (repeatable = AND)
    --exclude-text TEXT             Exclude FTS term
    --retrieval-lane LANE           Query lane: dialogue FTS, action text, or
                                    hybrid
    --lexical                       Force FTS-only search.
    --semantic                      Treat the query as a similarity prompt
                                    (vector-only; requires embeddings).
    --origin TEXT                   Include origins (comma = OR)
    --exclude-origin TEXT           Exclude origins
    -r, --repo TEXT                 Filter by repository name (comma = OR)
    --project TEXT                  Filter by provider project ref, e.g. ChatGPT
                                    g-p-<id> (comma = OR)
    -t, --tag TEXT                  Include tags (comma = OR, supports
                                    key:value)
    --exclude-tag TEXT              Exclude tags
    --title TEXT                    Title contains
    --referenced-path TEXT          Referenced file path contains substring
                                    (repeatable = AND)
    --cwd-prefix TEXT               Filter sessions whose recorded working
                                    directory starts with this prefix
    --action ACTION                 Require semantic action category (repeatable
                                    = AND)
    --exclude-action ACTION         Exclude semantic action category (repeatable
                                    = AND)
    --action-sequence TEXT          Require ordered semantic action subsequence
                                    (comma-separated)
    --action-text TEXT              Require text within normalized action
                                    evidence (repeatable = AND)
    --tool TEXT                     Require normalized tool name (repeatable =
                                    AND)
    --exclude-tool TEXT             Exclude normalized tool name (repeatable =
                                    AND)
    --similar TEXT                  Semantic similarity query (requires
                                    embeddings)
    --has TEXT                      Filter by content: thinking (reasoning),
                                    tools (calls), summary, attachments
    --has-tool-use                  Only sessions with tool use (SQL pushdown)
    --has-thinking                  Only sessions with thinking blocks (SQL
                                    pushdown)
    --has-paste                     Only sessions with paste evidence (SQL
                                    pushdown)
    --typed-only                    Only sessions without paste evidence (typed
                                    prose only)
    --min-messages INTEGER          Minimum message count
    --max-messages INTEGER          Maximum message count
    --min-words INTEGER             Minimum total word count
    --since-session TEXT            Show sessions in same cwd after this session
                                    ID
    --since TEXT                    After date (ISO, 'yesterday', 'last week')
    --until TEXT                    Before date
    -l, -n, --limit INTEGER         Max results
    --offset INTEGER                Offset for paginated results
    --cursor TEXT                   Opaque keyset cursor from a previous
                                    response's next_cursor. Stable across
                                    archive growth for ranked search (#1268).
    --latest                        Most recent (= --sort date --limit 1)
    --sort [date|tokens|messages|words|longest|random]
                                    Sort by field
    --reverse                       Reverse sort order
    --sample INTEGER                Random sample of N sessions
    -o, --output TEXT               Output destinations: browser, clipboard,
                                    stdout (comma-separated)
    --json                          Shortcut for --format json. Disables color
                                    and progress for pipeable output. (#1689)
    -f, --format [markdown|json|ndjson|html|obsidian|org|yaml|plaintext|csv]
                                    Output format (for --latest, --stream, or
                                    verb output). `ndjson` emits one JSON
                                    document per line, streaming-friendly for
                                    shell pipelines and LLM tool-use harnesses.
    --explain                       Explain query DSL parsing and lowering
                                    instead of executing the query.
    --stream                        Stream output (low memory). Requires
                                    --latest or -i ID.
    --set TEXT...                   Set metadata key value
    --add-tag TEXT                  Add tags (comma-separated)
    --plain                         Force non-interactive plain output
    -v, --verbose                   Verbose output
    --diagnose                      Explain CLI parser decisions on stderr
                                    before running. Useful when query-first
                                    dispatch surprises you: shows whether tokens
                                    were routed to a subcommand, an explicit
                                    query, or the strict command floor.
    --version                       Show the version and exit.
    -h, --help                      Show this message and exit.
  Commands:
    Search, read, and action workflows:
      find      Search the archive, then optionally run an...
      read      Read matched sessions (route to view<PATH>).
      select    Select one matched session or print candidate identities.
      mark      Mark selected sessions; review candidates under mark candidates.
      analyze   Analyze matched sessions and named facet families.
      facets    Show global or scoped archive facet families.
      delete    Delete matched sessions.
      continue  Compile a successor-agent continuation report.
      Use `find QUERY then ACTION`; `facets` is the direct archive aggregate
      command.
    Setup, import, and evidence:
      config    Show resolved Polylogue configuration with...
      init      Detect chat sources and write a starter polylogue.toml.
      hooks     Install and monitor harness capture hooks.
      import    Import sessions from configured sources.
      demo      Seed and verify the deterministic demo archive.
      tutorial  Inspect first-run setup state.
      Use these for first-run setup, hook wiring, source import, demo archives,
      and onboarding checks.
    Reader and local UI:
      agents     Inspect agent coordination state.
      dashboard  Launch the terminal dashboard TUI.
      `agents` exposes JSON-first coordination views for agent loops;
      `dashboard` launches the terminal TUI.
    Operations and maintenance:
      status  Show daemon and archive status.
      ops     Run operational archive and daemon commands.
      `polylogue status` is the root shortcut for `polylogue ops status`; deeper
      maintenance stays under `ops`.
  '''
# ---
# name: TestTerminalDimensions.test_help_at_narrow_width
  '''
  Usage: polylogue [OPTIONS] [COMMAND] [ARGS]...
    Polylogue - AI session archive.
    Dispatch model (query-first):
        Use `polylogue find QUERY then ACTION` for query-resul
  t workflows.
        Quoted query text is also accepted when followed by an
   action:
        `polylogue 'QUERY' then read`.
        Run `polylogue --help` to see the full subcommand list
  , or
        `polylogue --diagnose <args>` to have the parser expla
  in how it
        routed your invocation.
    Product roles:
        Search<PATH>:   find QUERY then read|select|mark
  |analyze|delete|continue; facets
        Setup<PATH>:  config, init, import, demo, tuto
  rial
        Reader<PATH>:           dashboard --status, dashboard
        Operations:           status (same as polylogue ops st
  atus), ops diagnostics, ops maintenance, ops backup
    Query mode (default):
        polylogue find "search terms"
        polylogue --origin claude-ai-export --since "last week
  " find "search terms"
        polylogue --latest find 'repo:polylogue' then read --t
  o browser
    Verbs (actions on matched sessions):
        polylogue find id:abc then read          # exact ref:
  one selected session
        polylogue find id:abc then select --json # expose sele
  cted-session identity
        polylogue find id:abc then read --view messages
        polylogue find id:abc then read --to browser
        polylogue find id:abc then analyze --facets
        polylogue facets --query "vector store" --format json
        polylogue find "urgent" then delete --dry-run
        polylogue find 'repo:polylogue' then read --all --form
  at ndjson
    Combined filters:
        polylogue --referenced-path README.md find 'repo:polyl
  ogue' then read
        polylogue find 'actions where tool:bash AND text:pytes
  t' then read --view messages
        polylogue --action-sequence file_read,file_edit,shell
  find 'repo:polylogue' then analyze
        polylogue --action-text "pytest -q" find 'repo:polylog
  ue' then read
        polylogue find 'pytest -q tests<PATH>
  c_facts.py' --retrieval-lane actions
        polylogue --origin claude-code-session --since 2026-01
  -01 find 'repo:polylogue' then analyze --by repo --format js
  on
        polylogue find 'actions where action:file_edit AND pat
  h:polylogue<PATH>' then read --view messages
        polylogue find 'near:"sqlite locking bug in parser"' t
  hen read
    Modifiers (write operations):
        polylogue find "urgent" then mark --tag-add review
    See also:
        polylogue --help                  # this screen
        polylogue find --help             # query workflow hel
  p
        polylogue <subcommand> --help     # per-subcommand hel
  p
        polylogue --diagnose <args>       # explain parser dec
  isions
  Options:
    --help-markdown                 Emit the full --help tree
  (root + every
                                    subcommand) as Markdown an
  d exit.
    -i, --id TEXT                   Session ID (exact or prefi
  x match)
    -c, --contains TEXT             FTS term (repeatable = AND
  )
    --exclude-text TEXT             Exclude FTS term
    --retrieval-lane LANE           Query lane: dialogue FTS,
  action text, or
                                    hybrid
    --lexical                       Force FTS-only search.
    --semantic                      Treat the query as a simil
  arity prompt
                                    (vector-only; requires emb
  eddings).
    --origin TEXT                   Include origins (comma = O
  R)
    --exclude-origin TEXT           Exclude origins
    -r, --repo TEXT                 Filter by repository name
  (comma = OR)
    --project TEXT                  Filter by provider project
   ref, e.g. ChatGPT
                                    g-p-<id> (comma = OR)
    -t, --tag TEXT                  Include tags (comma = OR,
  supports
                                    key:value)
    --exclude-tag TEXT              Exclude tags
    --title TEXT                    Title contains
    --referenced-path TEXT          Referenced file path conta
  ins substring
                                    (repeatable = AND)
    --cwd-prefix TEXT               Filter sessions whose reco
  rded working
                                    directory starts with this
   prefix
    --action ACTION                 Require semantic action ca
  tegory (repeatable
                                    = AND)
    --exclude-action ACTION         Exclude semantic action ca
  tegory (repeatable
                                    = AND)
    --action-sequence TEXT          Require ordered semantic a
  ction subsequence
                                    (comma-separated)
    --action-text TEXT              Require text within normal
  ized action
                                    evidence (repeatable = AND
  )
    --tool TEXT                     Require normalized tool na
  me (repeatable =
                                    AND)
    --exclude-tool TEXT             Exclude normalized tool na
  me (repeatable =
                                    AND)
    --similar TEXT                  Semantic similarity query
  (requires
                                    embeddings)
    --has TEXT                      Filter by content: thinkin
  g (reasoning),
                                    tools (calls), summary, at
  tachments
    --has-tool-use                  Only sessions with tool us
  e (SQL pushdown)
    --has-thinking                  Only sessions with thinkin
  g blocks (SQL
                                    pushdown)
    --has-paste                     Only sessions with paste e
  vidence (SQL
                                    pushdown)
    --typed-only                    Only sessions without past
  e evidence (typed
                                    prose only)
    --min-messages INTEGER          Minimum message count
    --max-messages INTEGER          Maximum message count
    --min-words INTEGER             Minimum total word count
    --since-session TEXT            Show sessions in same cwd
  after this session
                                    ID
    --since TEXT                    After date (ISO, 'yesterda
  y', 'last week')
    --until TEXT                    Before date
    -l, -n, --limit INTEGER         Max results
    --offset INTEGER                Offset for paginated resul
  ts
    --cursor TEXT                   Opaque keyset cursor from
  a previous
                                    response's next_cursor. St
  able across
                                    archive growth for ranked
  search (#1268).
    --latest                        Most recent (= --sort date
   --limit 1)
    --sort [date|tokens|messages|words|longest|random]
                                    Sort by field
    --reverse                       Reverse sort order
    --sample INTEGER                Random sample of N session
  s
    -o, --output TEXT               Output destinations: brows
  er, clipboard,
                                    stdout (comma-separated)
    --json                          Shortcut for --format json
  . Disables color
                                    and progress for pipeable
  output. (#1689)
    -f, --format [markdown|json|ndjson|html|obsidian|org|yaml|
  plaintext|csv]
                                    Output format (for --lates
  t, --stream, or
                                    verb output). `ndjson` emi
  ts one JSON
                                    document per line, streami
  ng-friendly for
                                    shell pipelines and LLM to
  ol-use harnesses.
    --explain                       Explain query DSL parsing
  and lowering
                                    instead of executing the q
  uery.
    --stream                        Stream output (low memory)
  . Requires
                                    --latest or -i ID.
    --set TEXT...                   Set metadata key value
    --add-tag TEXT                  Add tags (comma-separated)
    --plain                         Force non-interactive plai
  n output
    -v, --verbose                   Verbose output
    --diagnose                      Explain CLI parser decisio
  ns on stderr
                                    before running. Useful whe
  n query-first
                                    dispatch surprises you: sh
  ows whether tokens
                                    were routed to a subcomman
  d, an explicit
                                    query, or the strict comma
  nd floor.
    --version                       Show the version and exit.
    -h, --help                      Show this message and exit
  .
  Commands:
    Search, read, and action workflows:
      find      Search the archive, then optionally run an...
      read      Read matched sessions (route to view<PATH>
  on).
      select    Select one matched session or print candidate
  identities.
      mark      Mark selected sessions; review candidates unde
  r mark candidates.
      analyze   Analyze matched sessions and named facet famil
  ies.
      facets    Show global or scoped archive facet families.
      delete    Delete matched sessions.
      continue  Compile a successor-agent continuation report.
      Use `find QUERY then ACTION`; `facets` is the direct arc
  hive aggregate
      command.
    Setup, import, and evidence:
      config    Show resolved Polylogue configuration with...
      init      Detect chat sources and write a starter polylo
  gue.toml.
      hooks     Install and monitor harness capture hooks.
      import    Import sessions from configured sources.
      demo      Seed and verify the deterministic demo archive
  .
      tutorial  Inspect first-run setup state.
      Use these for first-run setup, hook wiring, source impor
  t, demo archives,
      and onboarding checks.
    Reader and local UI:
      agents     Inspect agent coordination state.
      dashboard  Launch the terminal dashboard TUI.
      `agents` exposes JSON-first coordination views for agent
   loops;
      `dashboard` launches the terminal TUI.
    Operations and maintenance:
      status  Show daemon and archive status.
      ops     Run operational archive and daemon commands.
      `polylogue status` is the root shortcut for `polylogue o
  ps status`; deeper
      maintenance stays under `ops`.
  '''
# ---
# name: TestTerminalDimensions.test_help_at_wide_width
  '''
  Usage: polylogue [OPTIONS] [COMMAND] [ARGS]...
    Polylogue - AI session archive.
    Dispatch model (query-first):
        Use `polylogue find QUERY then ACTION` for query-result workflows.
        Quoted query text is also accepted when followed by an action:
        `polylogue 'QUERY' then read`.
        Run `polylogue --help` to see the full subcommand list, or
        `polylogue --diagnose <args>` to have the parser explain how it
        routed your invocation.
    Product roles:
        Search<PATH>:   find QUERY then read|select|mark|analyze|delete|continue; facets
        Setup<PATH>:  config, init, import, demo, tutorial
        Reader<PATH>:           dashboard --status, dashboard
        Operations:           status (same as polylogue ops status), ops diagnostics, ops maintenance, ops backup
    Query mode (default):
        polylogue find "search terms"
        polylogue --origin claude-ai-export --since "last week" find "search terms"
        polylogue --latest find 'repo:polylogue' then read --to browser
    Verbs (actions on matched sessions):
        polylogue find id:abc then read          # exact ref: one selected session
        polylogue find id:abc then select --json # expose selected-session identity
        polylogue find id:abc then read --view messages
        polylogue find id:abc then read --to browser
        polylogue find id:abc then analyze --facets
        polylogue facets --query "vector store" --format json
        polylogue find "urgent" then delete --dry-run
        polylogue find 'repo:polylogue' then read --all --format ndjson
    Combined filters:
        polylogue --referenced-path README.md find 'repo:polylogue' then read
        polylogue find 'actions where tool:bash AND text:pytest' then read --view messages
        polylogue --action-sequence file_read,file_edit,shell find 'repo:polylogue' then analyze
        polylogue --action-text "pytest -q" find 'repo:polylogue' then read
        polylogue find 'pytest -q tests<PATH>' --retrieval-lane actions
        polylogue --origin claude-code-session --since 2026-01-01 find 'repo:polylogue' then analyze --by repo --format js
  on
        polylogue find 'actions where action:file_edit AND path:polylogue<PATH>' then read --view messages
        polylogue find 'near:"sqlite locking bug in parser"' then read
    Modifiers (write operations):
        polylogue find "urgent" then mark --tag-add review
    See also:
        polylogue --help                  # this screen
        polylogue find --help             # query workflow help
        polylogue <subcommand> --help     # per-subcommand help
        polylogue --diagnose <args>       # explain parser decisions
  Options:
    --help-markdown                 Emit the full --help tree (root + every
                                    subcommand) as Markdown and exit.
    -i, --id TEXT                   Session ID (exact or prefix match)
    -c, --contains TEXT             FTS term (repeatable = AND)
    --exclude-text TEXT             Exclude FTS term
    --retrieval-lane LANE           Query lane: dialogue FTS, action text, or
                                    hybrid
    --lexical                       Force FTS-only search.
    --semantic                      Treat the query as a similarity prompt
                                    (vector-only; requires embeddings).
    --origin TEXT                   Include origins (comma = OR)
    --exclude-origin TEXT           Exclude origins
    -r, --repo TEXT                 Filter by repository name (comma = OR)
    --project TEXT                  Filter by provider project ref, e.g. ChatGPT
                                    g-p-<id> (comma = OR)
    -t, --tag TEXT                  Include tags (comma = OR, supports
                                    key:value)
    --exclude-tag TEXT              Exclude tags
    --title TEXT                    Title contains
    --referenced-path TEXT          Referenced file path contains substring
                                    (repeatable = AND)
    --cwd-prefix TEXT               Filter sessions whose recorded working
                                    directory starts with this prefix
    --action ACTION                 Require semantic action category (repeatable
                                    = AND)
    --exclude-action ACTION         Exclude semantic action category (repeatable
                                    = AND)
    --action-sequence TEXT          Require ordered semantic action subsequence
                                    (comma-separated)
    --action-text TEXT              Require text within normalized action
                                    evidence (repeatable = AND)
    --tool TEXT                     Require normalized tool name (repeatable =
                                    AND)
    --exclude-tool TEXT             Exclude normalized tool name (repeatable =
                                    AND)
    --similar TEXT                  Semantic similarity query (requires
                                    embeddings)
    --has TEXT                      Filter by content: thinking (reasoning),
                                    tools (calls), summary, attachments
    --has-tool-use                  Only sessions with tool use (SQL pushdown)
    --has-thinking                  Only sessions with thinking blocks (SQL
                                    pushdown)
    --has-paste                     Only sessions with paste evidence (SQL
                                    pushdown)
    --typed-only                    Only sessions without paste evidence (typed
                                    prose only)
    --min-messages INTEGER          Minimum message count
    --max-messages INTEGER          Maximum message count
    --min-words INTEGER             Minimum total word count
    --since-session TEXT            Show sessions in same cwd after this session
                                    ID
    --since TEXT                    After date (ISO, 'yesterday', 'last week')
    --until TEXT                    Before date
    -l, -n, --limit INTEGER         Max results
    --offset INTEGER                Offset for paginated results
    --cursor TEXT                   Opaque keyset cursor from a previous
                                    response's next_cursor. Stable across
                                    archive growth for ranked search (#1268).
    --latest                        Most recent (= --sort date --limit 1)
    --sort [date|tokens|messages|words|longest|random]
                                    Sort by field
    --reverse                       Reverse sort order
    --sample INTEGER                Random sample of N sessions
    -o, --output TEXT               Output destinations: browser, clipboard,
                                    stdout (comma-separated)
    --json                          Shortcut for --format json. Disables color
                                    and progress for pipeable output. (#1689)
    -f, --format [markdown|json|ndjson|html|obsidian|org|yaml|plaintext|csv]
                                    Output format (for --latest, --stream, or
                                    verb output). `ndjson` emits one JSON
                                    document per line, streaming-friendly for
                                    shell pipelines and LLM tool-use harnesses.
    --explain                       Explain query DSL parsing and lowering
                                    instead of executing the query.
    --stream                        Stream output (low memory). Requires
                                    --latest or -i ID.
    --set TEXT...                   Set metadata key value
    --add-tag TEXT                  Add tags (comma-separated)
    --plain                         Force non-interactive plain output
    -v, --verbose                   Verbose output
    --diagnose                      Explain CLI parser decisions on stderr
                                    before running. Useful when query-first
                                    dispatch surprises you: shows whether tokens
                                    were routed to a subcommand, an explicit
                                    query, or the strict command floor.
    --version                       Show the version and exit.
    -h, --help                      Show this message and exit.
  Commands:
    Search, read, and action workflows:
      find      Search the archive, then optionally run an...
      read      Read matched sessions (route to view<PATH>).
      select    Select one matched session or print candidate identities.
      mark      Mark selected sessions; review candidates under mark candidates.
      analyze   Analyze matched sessions and named facet families.
      facets    Show global or scoped archive facet families.
      delete    Delete matched sessions.
      continue  Compile a successor-agent continuation report.
      Use `find QUERY then ACTION`; `facets` is the direct archive aggregate
      command.
    Setup, import, and evidence:
      config    Show resolved Polylogue configuration with...
      init      Detect chat sources and write a starter polylogue.toml.
      hooks     Install and monitor harness capture hooks.
      import    Import sessions from configured sources.
      demo      Seed and verify the deterministic demo archive.
      tutorial  Inspect first-run setup state.
      Use these for first-run setup, hook wiring, source import, demo archives,
      and onboarding checks.
    Reader and local UI:
      agents     Inspect agent coordination state.
      dashboard  Launch the terminal dashboard TUI.
      `agents` exposes JSON-first coordination views for agent loops;
      `dashboard` launches the terminal TUI.
    Operations and maintenance:
      status  Show daemon and archive status.
      ops     Run operational archive and daemon commands.
      `polylogue status` is the root shortcut for `polylogue ops status`; deeper
      maintenance stays under `ops`.
  '''
# ---
